# llm-exam-board

./: LICENSE  README.md  generators.py  judge_engine.py  orchestrator.py  pyproject.toml  resilience.py  responders.py
docs/: SYSTEM_PROMPT_V14.md
examples/: anthropic_client.py  gemini_client.py  groq_client.py  run_demo.py  run_free_demo.py  run_real_demo.py  run_two_teachers_demo.py
runs/001-truth-gate-and-ensemble-validation/: ANALYSIS.md  EXPECTATIONS.md  output.txt
runs/002-live-free-tier-run/: ANALYSIS.md  EXPECTATIONS.md  ISSUES.md  output.json  teacher_raw_debug.txt  teacher_raw_debug2.txt
runs/003-two-teachers-batch/: ANALYSIS.md  EXPECTATIONS.md  ISSUES.md  gemini_teacher_raw_debug.txt  output.json
runs/004-two-teachers-batch-fixed/: ANALYSIS.md  EXPECTATIONS.md  ISSUES.md  output.json
src/llm_exam_board/: __init__.py  generators.py  interfaces.py  judge_engine.py  orchestrator.py  resilience.py  responders.py
