[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-exam-board"
version = "1.0.0"
description = "A V14 Teacher-Student-Judge LLM evaluation pipeline with a static Truth Gate against judge hallucination."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
# Only needed to run examples/anthropic_client.py and examples/run_real_demo.py;
# the library itself has no third-party dependencies.
examples = ["anthropic>=0.116"]

[tool.setuptools.packages.find]
where = ["src"]
